welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: not found: value a
  if (Math.abs(10-(a%10))>2){
                   ^